Fix error message font-size at larger screen widths

--- a/public/stylus/spartacus.styl
+++ b/public/stylus/spartacus.styl
@@ -164,3 +164,10 @@ main,
 .err-msg {
     color: $blood-red;
 }
+
+@media $small-min-width {
+    .forgot-pin a,
+    .err-msg {
+        font-size: 14px;
+    }
+}
