Fix rtl display (bug 1037530)

--- a/public/stylus/_pin.styl
+++ b/public/stylus/_pin.styl
@@ -89,3 +89,12 @@
 
     }
 }
+
+html[dir="rtl"] .pinbox span {
+    margin-left: 10px;
+    margin-right: 0;
+
+    &:last-child {
+        margin: 0;
+    }
+}
