Handle simulated payments (bug 1045905)

--- a/public/stylus/spartacus.styl
+++ b/public/stylus/spartacus.styl
@@ -6,6 +6,7 @@
 @import '_full-error';
 @import '_forms';
 @import '_pin';
+@import '_simulate';
 
 $mp-fonts-path = '../lib/mp-fonts-stylus';
 @import '../lib/mp-fonts-stylus/fonts';
