Show terms and privacy policy if FxA is enabled (bug 1033851)
Add overlay for terms (bug 1033851)

Only demo iframed terms for tui size

Fix nits

Turn off console output in tests

Fix tests around urls opened with window.open

Update casper version for travis

Add removeAllListeners for url.changed to terms tests.

--- a/public/stylus/spartacus.styl
+++ b/public/stylus/spartacus.styl
@@ -5,6 +5,7 @@
 @import '_buttons';
 @import '_full-error';
 @import '_forms';
+@import '_overlay';
 @import '_pin';
 @import '_simulate';
 
@@ -167,6 +168,7 @@ main,
 }
 
 @media $small-min-width {
+    .terms,
     .forgot-pin a,
     .err-msg {
         font-size: 14px;
