--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -47,6 +47,7 @@
         </div>
       </div>
       <div id="error" class="error"></div>
+      <div id="overlay" class="overlay"></div>
     </main>
     <script src="{{ settings.browseridJsURL }}"></script>
     {% if settings.useMinJS == true -%}
