--- a/styleguide/templates/iframed/base.html
+++ b/styleguide/templates/iframed/base.html
@@ -12,6 +12,7 @@
       <div id="view" class="view">{% block content %}{% endblock %}</div>
       <div id="error" class="error">{% block error %}{% endblock %}</div>
       <div id="progress" class="progress">{% block throbber %}{% endblock %}</div>
+      <div id="overlay" class="overlay">{% block overlay %}{% endblock %}</div>
     </main>
     <script data-main="/src/js/main.js" src="/lib/js/requirejs/require.js"></script>
   </body>
