--- a/styleguide/templates/_sidebar-nav.html
+++ b/styleguide/templates/_sidebar-nav.html
@@ -20,6 +20,7 @@
     ['/create-pin', 'create-pin', 'Create Pin'],
     ['/error', 'error', 'Error'],
     ['/locked', 'locked', 'Locked'],
+    ['/iframe-overlay', 'iframe-overlay', 'Iframe Overlay'],
     ['/throbber', 'throbber', 'Throbber'],
     ['/was-locked', 'was-locked', 'Was locked']
 ] -%}
