--- a/styleguide/templates/base-styleguide.html
+++ b/styleguide/templates/base-styleguide.html
@@ -11,7 +11,7 @@
     <script src="/lib/js/prism/prism.js"></script>
   </head>
 
-  <body class="styleguide">
+  <body class="styleguide{% if tui_only %} tui-only{% endif %}">
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
