Fix up keyboard a11y (bug 1094735, 1099237)

--- a/public/stylus/_pin.styl
+++ b/public/stylus/_pin.styl
@@ -25,6 +25,10 @@
     overflow: hidden;
     font-size: 0;
 
+    &.focused span {
+        border: 1px solid $battleship-gray;
+    }
+
     span {
         display: inline-block;
         vertical-align: middle;
