--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Webpay | {{ gettext('Loading')}}</title>
+    <title>{{ gettext('Loading')}} | Firefox Marketplace</title>
     <link rel="stylesheet" href="/css/spartacus.css">
   </head>
   <body
