Continue to show forgot-pin on bad PIN (bug 1098011)

--- a/public/stylus/_pin.styl
+++ b/public/stylus/_pin.styl
@@ -10,7 +10,13 @@
     max-width: 300px;
 
     p {
-        margin: 8px 0 5px;
+        font-size: 14px;
+        margin: 8px 8px 5px 0;
+        float: left;
+
+        a {
+            font-size: 14px;
+        }
     }
 }
 
