--- a/public/stylus/spartacus.styl
+++ b/public/stylus/spartacus.styl
@@ -99,6 +99,7 @@ main,
 .buttons {
     background: rgba(0,0,0,0.03);
     border-top: 1px solid #ccc;
+    clear: both;
     line-height: 0;
     margin: 5px -20px -10px;
     padding: 10px;
