--- a/styleguide/templates/_sidebar-nav.html
+++ b/styleguide/templates/_sidebar-nav.html
@@ -22,7 +22,8 @@
     ['/locked', 'locked', 'Locked'],
     ['/iframe-overlay', 'iframe-overlay', 'Iframe Overlay'],
     ['/throbber', 'throbber', 'Throbber'],
-    ['/was-locked', 'was-locked', 'Was locked']
+    ['/was-locked', 'was-locked', 'Was locked'],
+    ['/signout', 'signout', 'Sign Out Interstitial']
 ] -%}
 
 <h2>Pages</h2>
