--- a/public/stylus/_typography.styl
+++ b/public/stylus/_typography.styl
@@ -53,4 +53,12 @@ a:focus {
         font-size: 22px;
         line-height: 28px;
     }
+
+    a:link,
+    a:visited,
+    a:hover,
+    a:active,
+    a:focus {
+        font-size: 18px;
+    }
 }
