Allow super user to simulate network (bug 1034118)

--- a/public/stylus/spartacus.styl
+++ b/public/stylus/spartacus.styl
@@ -8,6 +8,7 @@
 @import '_overlay';
 @import '_pin';
 @import '_simulate';
+@import '_super-simulate';
 
 $mp-fonts-path = '../lib/mp-fonts-stylus';
 @import '../lib/mp-fonts-stylus/fonts';
