Prevent tests calling external urls

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -10,9 +10,9 @@
   <body
     class="dev-server"
     data-base-api-url="{{ settings.baseApiUrl }}"
-    data-privacy-policy="https://marketplace.firefox.com/privacy-policy"
+    data-privacy-policy="/privacy"
     data-reset-user-url="{{ settings.resetUserURL }}"
-    data-terms-of-service="https://marketplace.firefox.com/terms-of-use"
+    data-terms-of-service="/terms"
     data-unverified-issuer="{{ settings.browseridUnverifiedIssuerl }}"
     data-verify-url="{{ settings.verifyUserURL }}"
     data-reverify-url="{{ settings.reVerifyUserURL }}"
