show solitude errored transactions (bug 1149095)

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -27,6 +27,7 @@
     data-trans-status-pending="0"
     data-trans-status-failed="4"
     data-trans-status-cancelled="5"
+    data-trans-status-errored="7"
     data-settings="{{ settings.appSettingsOverrides }}"
     data-start-view="{{ startView }}"
     data-error-code="{{ errorCode }}"
